<resources>
    <string name="app_name">Reminder</string>

    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="menu_item_notification">Notification</string>
    <string name="menu_add_item">Add</string>
    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>
    <string name="empty_notification_list">There are no notifications. Add new notification</string>
    <string name="add_notification_title">Add new notification</string>
    <string name="add_title">Title</string>
    <string name="add_no_title">No title</string>
    <string name="add_description">Description</string>
    <string name="add_no_description">No description</string>
    <string name="add_date">Date</string>
    <string name="add_no_date">No date</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
</resources>
